优化打包体积一些方案

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,18 @@
       <strong>We're sorry but blog-front doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js" integrity="sha512-PwQ5+jgXxxprNGc80ycHE3spgj6TuDieHe/yTkbEJ+U5aol7dTupi/4VbwHHzlQVW77Vb0GLOIsiYigHgC5vcg==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-router/3.0.3/vue-router.min.js" integrity="sha512-b/eFNKCbVglOlOkrIXw3r42RxcQbnm3Kei9oENeBCslmvR25dYZBgV/8AC5WNHQKjASzu6hQjfhD1EYkHw9usg==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vuex/3.0.1/vuex.min.js" integrity="sha512-zybwL6xp1wqU0npOL4cJ2xNXm/oeEEMMl5UVFKgG0wTmecSY5tyWPr3wmvDl76qF+a78tLoLqOeyNWZw4QSjqg==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js" integrity="sha512-quHCp3WbBNkwLfYUMd+KwBAgpVukJu5MncuQaWXgCrfgcxCJAq/fo+oqrRKOj+UKEmyMCG3tb8RB63W+EmrOBg==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js" integrity="sha512-QkuqGuFAgaPp3RTyTyJZnB1IuwbVAqpVGN58UJ93pwZel7NZ8wJOGmpO1zPxZGehX+0pc9/dpNG9QdL52aI4Cg==" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.2.0/highlight.min.js" integrity="sha512-TDKKr+IvoqZnPzc3l35hdjpHD0m+b2EC2SrLEgKDRWpxf2rFCxemkgvJ5kfU48ip+Y+m2XVKyOCD85ybtlZDmw==" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.2.0/highlight.min.js" integrity="sha512-TDKKr+IvoqZnPzc3l35hdjpHD0m+b2EC2SrLEgKDRWpxf2rFCxemkgvJ5kfU48ip+Y+m2XVKyOCD85ybtlZDmw==" crossorigin="anonymous"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.3.1/languages/javascript.min.js" integrity="sha512-0Mx6QSLEYBBcG/wzgKUdamRKjPAYswJBvINlgsb2ILFBXnj+GeE2nhu0w11MHx/lkmqih7vmV9JhXxj5ZjpQ7Q==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.3.1/languages/typescript.min.js" integrity="sha512-rIFmGN3IG5Xb9fT3F/aNo2XDOSTdP4xz5vY5hHLK38pjsFMS2rLzeGI8gq5aNKCkWXztDbaGpHps3fXSoFgUfg==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.3.1/languages/css.min.js" integrity="sha512-1KS0IqxdXMnDSJgJoA4T/Hpm374ibBqtDFXh4CFIgGQLioA9sG6MbhAMu8wq+wYtUm35UqEtjKRF5/OlVLzOVw==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.3.1/languages/xml.min.js" integrity="sha512-W630eDKKBqvKea3ZwV1Nz8nbWD2xgTzHmnVV61XEfrzervHXbahG3yfjcCmMtc0hOjdEdmmO5klQUEC1C5LUrA==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.3.1/languages/bash.min.js" integrity="sha512-Z6j+SOj8CIG4uKzO1s9C2WRYmySifLgg8B6Pf298HYbujenDoQriZpjiuvL9oF2NqFjJoA1/DOlQhppunGpYzQ==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.3.1/languages/markdown.min.js" integrity="sha512-/0In4Sj5WPtCRlaKmf8ilFWh99DzbZfkisGk5xj4k9JxGuhRAlhRSvyEY/zZjzz2fI47ojlZg+iVF6pNVEzCVQ==" crossorigin="anonymous"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.7.0/marked.min.js" integrity="sha512-lS8TP+YpY3cAzofQNSyGyEdGyl8SQMS1M3ml7tIFGYoIYFQp5sTGr6UIGV59m4oe4nREaXtT5uQ8XODEcjAnGw==" crossorigin="anonymous"></script>
 
     <div id="app"></div>
