index.html添加meta keywords利于seo

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.cdn.css[i] %>" crossorigin="anonymous" />
     <% } %>
     <title>赫子子的博客</title>
+    <meta
+      name="keywords"
+      content="赫子子,赫子子的博客,yuci,yucihent,yucihzz"
+    />
   </head>
   <body>
     <noscript>
