--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <title>赫子子的博客</title>
     <meta
       name="keywords"
-      content="赫子子,赫子子的博客,yuci,yucihent,yucihzz"
+      content="赫子子,赫子子的博客,yuci,yuci的博客,yucihent,yucihent blog,yucihzz,yucihzz blog"
     />
   </head>
   <body>
