feat: 添加首屏加载动画

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <% for (var css of htmlWebpackPlugin.options.cdn && htmlWebpackPlugin.options.cdn.css) { %>
       <link rel="stylesheet" href="<%= css %>" crossorigin="anonymous" />
     <% } %>
+    <link rel="stylesheet" href="./loading.css" crossorigin="anonymous" />
     <title>赫子子的博客</title>
     <meta
       name="keywords"
@@ -34,7 +35,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.3.1/languages/bash.min.js" integrity="sha512-Z6j+SOj8CIG4uKzO1s9C2WRYmySifLgg8B6Pf298HYbujenDoQriZpjiuvL9oF2NqFjJoA1/DOlQhppunGpYzQ==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.3.1/languages/markdown.min.js" integrity="sha512-/0In4Sj5WPtCRlaKmf8ilFWh99DzbZfkisGk5xj4k9JxGuhRAlhRSvyEY/zZjzz2fI47ojlZg+iVF6pNVEzCVQ==" crossorigin="anonymous"></script> -->
 
-    <div id="app"></div>
+    <div id="app">
+      <!-- loading -->
+      <div class="loading">
+        <div class="jumping"></div>
+        <h3>Loading...</h3>
+      </div>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
